--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -16,6 +16,7 @@ section.rest-xmlrpc-data-checker:first-of-type {
 h2.nav-tab-wrapper a.rest-xmlrpc-data-checker {
 	cursor: pointer;
 }
+
 /* Tabs management - end */
 
 .form-table .rest-xmlrpc-data-checker-indent {
@@ -66,6 +67,9 @@ div.update-nag.xmlrpc_enable_alert {
 	margin-top: 5px;
 	margin-left: 22px;
 	display: none;
+	background-color: #fff;
+	border-left: 4px solid #ffba00;
+	box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.1);
 }
 
 .prettydropdown > ul {
@@ -94,8 +98,9 @@ table.rest-xmlrpc-data-checker-users-list tfoot {
 	width: 100%;
 	table-layout: fixed;
 }
+
 table.rest-xmlrpc-data-checker-users-list thead {
-	width: calc( 100% - 1.1em );
+	width: calc(100% - 1.1em);
 }
 
 table.rest-xmlrpc-data-checker-users-list.cb tbody tr td {
@@ -124,11 +129,11 @@ th.column-rest-xmlrpc-data-checker-status {
 }
 
 .rest-xmlrpc-data-checker-ok {
-	color: green;
+	color: #008000;
 }
 
 .rest-xmlrpc-data-checker-ko {
-	color: #dd0000;
+	color: #d00;
 }
 
 td.column-rest-xmlrpc-data-checker-status div.table {
@@ -146,6 +151,7 @@ td.column-rest-xmlrpc-data-checker-status div.cell {
 }
 
 @media screen and ( max-width: 782px ) {
+
 	th.column-rest-xmlrpc-data-checker-status,
 	td.column-rest-xmlrpc-data-checker-status {
 		text-align: inherit;
